Release the versions index (#28)
* remove useless focus

* update schema support for timestamp type

* create the route

* create the policy

* create the DTO

* create the controller and its specs
