# api/app/dtos/organization/project_version_index_response_dto.rb
@@ -1,0 +1,9 @@
+class Organization::ProjectVersionIndexResponseProjectDto < OpenApiDto
+  field "id", :integer
+  field "number", :integer
+  field "created_at", :timestamp
+end
+
+class Organization::ProjectVersionIndexResponseDto < OpenApiDto
+  field "results", :array, subtype: Organization::ProjectVersionIndexResponseProjectDto
+end
